--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -19,6 +19,7 @@
 @use "./blocks/modal";
 @use "./blocks/sample";
 @use "./blocks/services-slider";
+@use "./blocks/alt-hero";
 @use "./blocks/services";
 @use "./blocks/contacts";
 @use "./blocks/not-found";
