--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -6,6 +6,7 @@
   --color-accent-transparent: rgba(101, 0, 143, 0.97);
   --color-dark-overlay: rgba(16, 11, 18, 0.5);
   --color-light-overlay: rgba(255, 255, 255, 0.75);
+  --color-light-blur: rgba(255, 255, 255, 0.64);
   --color-dark: #1b0126;
   --color-green: #7FC234;
   --font-family-base: "aktiv-grotesk", sans-serif;
