--- a/src/styles/blocks/modal.scss
+++ b/src/styles/blocks/modal.scss
@@ -26,14 +26,14 @@
   &__inner {
     width: 100%;
     max-width: rem(738);
-    max-height: rem(924);
+    max-height: max-content;
     height: 100%;
     overflow: auto;
     display: inline-block;
     border-radius: 13px;
   }
   &__content {
-    padding: rem(60) fluid(32, 60) rem(30) fluid(32, 60);
+    padding: rem(50) fluid(22, 50) rem(30) fluid(22, 50);
     background-color: var(--color-light-overlay);
     border-radius: 13px;
     transition: opacity 0.3s ease;
@@ -46,8 +46,9 @@
   &__title {
     margin-bottom: 0;
     text-align: center;
-    font-size: fluid(36, 52);
+    font-size: fluid(30, 40);
     color: var(--color-dark);
+    padding-bottom: 0;
     &::after {
       display: none;
     }
