--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -46,12 +46,15 @@ h2,
   font-size: fluid(40, 64);
   text-align: center;
   margin-bottom: fluid(32, 50);
-  display: flex;
-  flex-direction: column;
-  row-gap: rem(35);
+  padding-bottom: rem(25);
+  position: relative;
 
   &::after {
     content: "";
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
     width: 100%;
     height: 1px;
     background-repeat: no-repeat;
