Додавання блогу на головну сторінку: інтеграція секції блогу з слайдером, оновлення стилів для кнопок CTA та слайдера, а також виправлення відступів у стилях.

--- a/src/styles/blocks/benefits.scss
+++ b/src/styles/blocks/benefits.scss
@@ -1,7 +1,7 @@
 @use "../helpers" as *;
 
 .benefits {
-  padding: fluid(40, 120) 0;
+  padding: rem(40) 0;
   &__container {
     column-gap: rem(24);
     row-gap: fluid(20, 40);
