Додавання нових секцій на головну сторінку: інтеграція відгуків Google, стрічки Instagram та FAQ з відповідними стилями та функціональністю аккордеона.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -26,5 +26,8 @@
 @use "./blocks/to-top-button";
 @use "./blocks/button-cta";
 @use "./blocks/blog-section";
+@use "./blocks/faq";
+@use "./blocks/google-testimonials";
+@use "./blocks/instagram-feed";
 
 @import "/node_modules/aos/dist/aos.css";
