Оновлення стилів кнопки CTA: зміна максимального розміру з rem на max-content для покращення адаптивності.

--- a/src/styles/blocks/simple-cta.scss
+++ b/src/styles/blocks/simple-cta.scss
@@ -24,7 +24,7 @@
     }
   }
   a.button {
-    max-width: rem(284);
+    max-width: max-content;
     width: 100%;
     @include x-small {
       max-width: 100%;
