Оновлення стилів секції героя: додано нижній відступ для контенту на малих екранах та видалено його для середніх екранів.

--- a/src/styles/blocks/hero.scss
+++ b/src/styles/blocks/hero.scss
@@ -51,8 +51,10 @@
   }
   &__content {
     flex: 0 1 rem(883);
+    padding-bottom: rem(90);
     @include medium {
       flex: 0 1 auto;
+      padding-bottom: 0;
     }
     h1 {
       margin-bottom: rem(24);
