Оновлення стилів секції CTA: додано нижній відступ для покращення візуального сприйняття.

--- a/src/styles/blocks/simple-cta.scss
+++ b/src/styles/blocks/simple-cta.scss
@@ -1,6 +1,7 @@
 @use "../helpers" as *;
 
 .simple-cta {
+  margin: rem(40) 0;
   &__inner {
     border-radius: 16px;
     background-color: var(--color-accent);
