Оновлення секції переваг послуг: додано новий слайдер з описом переваг, оновлено стилі та інтегровано нові функціональні можливості для покращення взаємодії з користувачем.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -29,5 +29,6 @@
 @use "./blocks/faq";
 @use "./blocks/google-testimonials";
 @use "./blocks/instagram-feed";
+@use "./blocks/service-benefits";
 
 @import "/node_modules/aos/dist/aos.css";
