--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -30,5 +30,6 @@
 @use "./blocks/google-testimonials";
 @use "./blocks/instagram-feed";
 @use "./blocks/service-benefits";
+@use "./blocks/tabs";
 
 @import "/node_modules/aos/dist/aos.css";
