Оновлення секцій послуг: додано нову секцію з перевагами домашнього догляду, оновлено стилі для заголовків та тексту, а також інтегровано нові елементи для покращення візуального сприйняття контенту.

--- a/src/styles/blocks/cta.scss
+++ b/src/styles/blocks/cta.scss
@@ -73,5 +73,12 @@
     a.button-cta {
       margin-top: fluid(24, 60);
     }
+
+    p:not(:last-child) {
+      margin-bottom: rem(16);
+    }
+    p:has(a) {
+      margin-top: rem(24);
+    }
   }
 }
