--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -31,5 +31,6 @@
 @use "./blocks/instagram-feed";
 @use "./blocks/service-benefits";
 @use "./blocks/tabs";
+@use "./blocks/grid";
 
 @import "/node_modules/aos/dist/aos.css";
