--- a/src/styles/blocks/tabs.scss
+++ b/src/styles/blocks/tabs.scss
@@ -6,23 +6,6 @@
   &__container {
   }
 
-  &__header {
-    max-width: rem(1240);
-    padding-inline: rem(20);
-    margin: 0 auto;
-    margin-bottom: fluid(36, 75);
-  }
-
-  &__header-title {
-  }
-
-  &__header-text {
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    gap: rem(16);
-  }
-
   &__body {
     display: flex;
     column-gap: rem(60);
@@ -51,7 +34,6 @@
     border-top: 1px solid rgba(169, 169, 188, 0.5);
     display: block;
 
-
     &.is-active {
       color: var(--color-dark);
     }
@@ -68,23 +50,25 @@
   &__panel {
     display: none;
     position: relative;
+    height: 100%;
 
     &.is-active {
       display: block;
     }
 
     &-image {
-      width: 100%;
-      height: 100%;
+      width: calc(100% + rem(4));
+      height: calc(100% + rem(4));
       object-fit: cover;
+      border: rem(3) solid var(--color-green);
+      border-radius: rem(16);
     }
     &-content {
       padding: rem(12);
       position: absolute;
       right: 0;
       bottom: 0;
-      max-width: rem(618);
-
+      max-width: rem(645);
 
       @include large {
         position: relative;
@@ -98,8 +82,6 @@
         border-radius: rem(8);
         background: rgba(255, 255, 255, 0.85);
         padding: rem(16);
-
-        
 
         p {
           font-size: rem(20);
