--- a/src/styles/blocks/service-benefits.scss
+++ b/src/styles/blocks/service-benefits.scss
@@ -105,6 +105,8 @@
     line-height: 1.3;
     margin-bottom: rem(16);
     color: var(--color-dark);
+    flex-grow: 1;
+    min-height: rem(62);
   }
 
   &__text {
